--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.15.2",
     "parcel": "^2.15.2"
+  },
+  "dependencies": {
+    "apexcharts": "^4.7.0"
   }
 }
